<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <action
    android:id="@+id/open_pest_note"
    app:destination="@id/pest_note_fragment">

    <argument
      android:name="plant_id"
      app:argType="long"/>
  </action>

  <action
    android:id="@+id/open_weather_note"
    app:destination="@id/weather_note_fragment">

    <argument
      android:name="plant_id"
      app:argType="long"/>
  </action>

  <action
    android:id="@+id/open_other_note"
    app:destination="@id/other_note_fragment">

    <argument
      android:name="plant_id"
      app:argType="long"/>
  </action>

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.HomeFragment"
    tools:layout="@layout/fragment_home"/>

  <fragment
    android:id="@+id/nav_plant"
    android:label="@string/menu_plants"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.PlantFragment"
    tools:layout="@layout/fragment_plants"/>

  <fragment
    android:id="@+id/nav_notes"
    android:label="@string/menu_notes"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.NotesFragment"
    tools:layout="@layout/fragment_notes"/>

  <dialog
    android:id="@+id/pest_note_fragment"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.PestNoteFragment"
    android:label="fragment_pest_note"
    tools:layout="@layout/fragment_pest_note">
    <argument
      android:name="plant_id"
      app:argType="long"/>
  </dialog>

  <dialog
    android:id="@+id/weather_note_fragment"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.WeatherNoteFragment"
    android:label="fragment_weather_note"
    tools:layout="@layout/fragment_weather_note">
    <argument
      android:name="plant_id"
      app:argType="long"/>

  </dialog>

  <dialog
    android:id="@+id/other_note_fragment"
    android:name="edu.cnm.deepdive.gardenbuddy.controller.OtherNoteFragment"
    android:label="fragment_other_note"
    tools:layout="@layout/fragment_other_note">
    <argument
      android:name="plant_id"
      app:argType="long"/>

  </dialog>

</navigation>