<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.NotesFragment">

  <Spinner
    android:id="@+id/plants_spinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/pest_notes_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pest_related_incidents"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/plants_spinner"
    app:layout_constraintBottom_toTopOf="@id/pest_notes"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/pest_notes"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/pest_notes_header"
    app:layout_constraintBottom_toTopOf="@id/weather_notes_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:layout_margin="@dimen/half_dimen"
    android:padding="@dimen/half_dimen"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/add_pest_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:useCompatPadding="true"
    android:src="@drawable/ic_add"
    app:layout_constraintEnd_toEndOf="@id/pest_notes"
    app:layout_constraintBottom_toBottomOf="@id/pest_notes"/>

  <View
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="?attr/colorPrimaryDark"
    app:layout_constraintBottom_toTopOf="@id/weather_notes_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/weather_notes_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/weather_related_incidents"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/pest_notes"
    app:layout_constraintBottom_toTopOf="@id/weather_notes"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/weather_notes"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/weather_notes_header"
    app:layout_constraintBottom_toTopOf="@id/other_notes_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:layout_margin="@dimen/half_dimen"
    android:padding="@dimen/half_dimen"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/add_weather_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:useCompatPadding="true"
    android:src="@drawable/ic_add"
    app:layout_constraintEnd_toEndOf="@id/weather_notes"
    app:layout_constraintBottom_toBottomOf="@id/weather_notes"/>

  <View
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="?attr/colorPrimaryDark"
    app:layout_constraintBottom_toTopOf="@id/other_notes_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/other_notes_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/other_notes"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@id/other_notes"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/weather_notes"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/other_notes"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/other_notes_header"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:padding="@dimen/half_dimen"
    android:layout_margin="@dimen/half_dimen"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/add_other_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:useCompatPadding="true"
    android:src="@drawable/ic_add"
    app:layout_constraintEnd_toEndOf="@id/other_notes"
    app:layout_constraintBottom_toBottomOf="@id/other_notes"/>

</androidx.constraintlayout.widget.ConstraintLayout>